style.css
body{
    margin: 0;
}
.main_grid{
    display: grid;
}
.header{
    padding: 2em;
    display: flex;
    justify-content: space-between;
    background-image: url("images/laptop.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: 50% 45%;
}
.header h1{
    margin-top: auto;
    margin-bottom: auto;
    color: silver;
    font-size: 2em;
    text-align: center;
    background: -webkit-linear-gradient(rgb(201, 97, 158), rgb(252, 150, 69));
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}
.face_pic{
    max-width: 10em;
    height: auto;
    border-radius: 50%;
}
.about{
    background-color: #36393e;
    border-bottom-style: solid;
    border-width: 3px;
    border-image: linear-gradient(to right,rgb(201, 97, 158), rgb(252, 150, 69))1;
}
.about h1{
    margin: 0;
    font-size: 2em;
    padding: .5em;
    text-align: center;
    color: #7289da
}
.about p{
    color: silver;
    font-size: 1.3em;
    padding-bottom: 2em;
    text-align: center;
    margin: 0;
}

.skills{
    margin: 0;
    background-color: #282b30;
    border-bottom-style: solid;
    border-width: 3px;
    border-image: linear-gradient(to left,rgb(201, 97, 158), rgb(252, 150, 69))1;

}
.skills h1{
    margin: 0;
    font-size: 2em;
    padding: .5em;
    text-align: center;
    color: #7289da
}
.skills_content{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: stretch;
    padding-bottom: 2em;
}
.skills_content ul{
    color: silver;
    font-size: 1.3em;
    text-align: left;
    margin: 0;
}
.skills_content p{
    color: silver;
    font-size: 1.3em;
    text-align: center;
    margin: 0;
}
.sleft{
    width: 20em;
}
.sright{
    width: 20em;
}
.project{
    padding: 2em;
    background-color: #1e2124;
    border-bottom-style: solid;
    border-width: 3px;
    border-image: linear-gradient(to right,rgb(201, 97, 158), rgb(252, 150, 69))1;
    
}
.project h1{
    margin: 0;
    font-size: 2em;
    padding: .5em;
    text-align: center;
    color: #7289da
}
.project p{
    color: silver;
    font-size: 1.3em;
    padding-bottom: 2em;
    text-align: center;
    margin: 0;
}


.contain{
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
}
.card {
    width: 20em;
    border-radius: 5%;
    margin: 2em;
    background: #36393e;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}
.project span {
    height: 100px;
    display: block;
    width: 100%;
    background: #71A6B8;
}
.content h3{
    margin: 0;
    color: #7289da;
}

p.date {
    text-align: left;
    font-size: .7em;
    text-transform: uppercase;
    color: silver;
}
p.desc {
    font-size: .9em;
    margin-bottom: 0;
    text-align: left;
    margin-top: .5em;
    color: silver;
}

a{
    text-decoration: none;
}


.contact{
    padding: 2em;
    background-color: #1e2124;
    border-bottom-style: solid;
    border-width: 3px;
    border-image: linear-gradient(to right,rgb(201, 97, 158), rgb(252, 150, 69))1;
}
.con_cards{
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
}
.contact h1{
    margin: 0;
    font-size: 2em;
    padding: .5em;
    text-align: center;
    color: #7289da
}
.contact h3{
    color: silver;
    font-size: 2em;
    text-align: center;
    padding-bottom: .3em;
    margin: 0;

}
.contact p{
    color: silver;
    font-size: 1.3em;
    padding-top: .2em;
    padding-bottom: 2em;
    text-align: center;
    margin: 0;
}
.copy_pic{
    height: 30px;
    width: 30px;
    padding-left: .3em;
    margin-bottom: 5em;
}
.email_content{
    display: flex;
    justify-content: center;
}
.phone_content{
    display: flex;
    justify-content: center;
}
.Phone{
    width: 20em;
}
.Email{
    width: 20em;
}
.github{
    width: 20em;
}
/* Tooltip container */
.tooltip {
    position:relative; /* making the .tooltip span a container for the tooltip text */
    border-bottom:1px dashed #000; /* little indicater to indicate it's hoverable */
  }
  .tooltip:before {
    content: attr(data-text); /* here's the magic */
    position:absolute;
    
    /* vertically center */
    transform:translateY(0%);
    transform:translateX(50%);
    
    /* move to right */
    right:50%;
    bottom: 100%;
    
    /* basic styles */
    width:6em;
    padding:.3em;
    border-radius:5%;
    background:#000;
    color: #fff;
    text-align:center;
  
    display:none; /* hide by default */
  }
  .tooltip:hover:before {
    display:block;
  }

  .github a{
    text-decoration:underline;
    text-decoration-color: silver;
    text-decoration-thickness: .2em;
    text-decoration-style: dotted;
  }

/* Style the navbar */
#navbar {
    overflow: hidden;
    background-color: #1e2124;
    z-index: 999;
  }
  
  /* Navbar links */
  #navbar a {
    float: left;
    display: block;
    color: #f2f2f2;
    text-align: center;
    padding: 1em;
    text-decoration: none;
    scroll-padding-top: 5em;
  }
  #navbar a:hover{
    background-color: #424549;
  }
  /* Page content */
  .content {
    padding: 16px;
  }
  
  /* The sticky class is added to the navbar with JS when it reaches its scroll position */
  .sticky {
    position: fixed;
    top: 0;
    width: 100%;
  }
  
  /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
  .sticky + .content {
    padding-top: 60px;
  }

